move app notes from install.txt to readme.txt, update readme with backfill info, update changelog.
git-svn-id: svn://svn.newznab.com/nn/trunk@1197 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -14,7 +14,8 @@
 HEAD
 -----------------------------------------
 Amazon api music data, migrate db to utf8, musicview, move all pages in
-/pages dir, theme style improvements, change urls
+/pages dir, theme style improvements, change urls, multi nzb import from
+browser, category updates, movie lookups for releases without nfos
 
 
 0.1.9	Dec 23 2010
