--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,7 +11,7 @@
      \/__/         \/__/         \/__/         \/__/         \/__/         \/__/         ~~       
 
 
-HEAD
+0.2.0	Jan 16 2011
 -----------------------------------------
 Amazon api music data, migrate db to utf8, musicview, move all pages in
 /pages dir, theme style improvements, change urls, multi nzb import from
