add urls of where to signup for api keys.
git-svn-id: svn://svn.newznab.com/nn/trunk@1203 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -22,8 +22,8 @@ REQUIREMENTS
 		.htaccess allow override on
 
 	3rd Party API Keys (recommended to get your own api keys)
-		tmdb
-		amazon
+		tmdb (signup @ http://api.themoviedb.org/2.1/)
+		amazon (signup @ https://affiliate-program.amazon.com/gp/advertising/api/detail/main.html)
 		
 INSTALLATION
 	there is an installer in \install\ try it first by creating your website
