--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,6 +11,11 @@
      \/__/         \/__/         \/__/         \/__/         \/__/         \/__/         ~~       
 
 
+HEAD
+-----------------------------------------
+Console covers, forum
+
+
 0.2.0	Jan 16 2011
 -----------------------------------------
 Amazon api music data, migrate db to utf8, musicview, move all pages in
