--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,7 +13,7 @@
 
 HEAD
 -----------------------------------------
-Console covers, forum
+Console covers, forum, tvrage lookup rewrite, upgrade to smarty 3
 
 
 0.2.0	Jan 16 2011
