--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,7 +13,10 @@
 
 HEAD
 -----------------------------------------
-Console covers, forum, tvrage lookup rewrite, upgrade to smarty 3
+Console covers, forum, tvrage lookup rewrite, upgrade to smarty 3, 
+support for usp that dont support list overview.fmt, 
+more consistent details page, cron/init improvements, delete from sab queue,
+series view updates, installer revamp
 
 
 0.2.0	Jan 16 2011
