new version number
git-svn-id: svn://svn.newznab.com/nn/trunk@1330 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,6 +13,12 @@
 
 HEAD
 -----------------------------------------
+
+
+
+
+0.2.1	Feb 12 2011
+-----------------------------------------
 Console covers, forum, tvrage lookup rewrite, upgrade to smarty 3, 
 support for usp that dont support list overview.fmt, 
 more consistent details page, cron/init improvements, delete from sab queue,
