update changelog for last version increment
git-svn-id: svn://svn.newznab.com/nn/trunk@1369 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,8 +13,13 @@
 
 HEAD
 -----------------------------------------
-grouped releases in movie view
 
+
+
+
+0.2.2	Feb 21 2011
+-----------------------------------------
+grouped releases in movie view, critical error in user cart removal.
 
 
 0.2.1	Feb 12 2011
